logs/uncertainty-7755330.err
flatpak: error while loading shared libraries: libssl.so.10: cannot open shared object file: No such file or directory
Lmod has detected the following error: The following module(s) are unknown:
"slurm"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "slurm"

Also make sure that all modulefiles written in TCL start with the string
#%Module



/home/akshatat/.conda/envs/mech_interp_gpu/lib/python3.10/site-packages/transformers/utils/hub.py:110: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.
  warnings.warn(
Traceback (most recent call last):
  File "/orcd/home/002/akshatat/uncertainty_routing/run_complete_pipeline.py", line 25, in <module>
    from experiment3_4_steering_independence import Experiment3, Experiment4
  File "/orcd/home/002/akshatat/uncertainty_routing/experiment3_4_steering_independence.py", line 325
    """Analyze steering results - using answer changes as primary metric"""
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
IndentationError: expected an indented block after function definition on line 324
